--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
