--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
+    "react-loading-skeleton": "^3.4.0",
     "react-toastify": "^10.0.5",
     "swr": "^2.2.5"
   },
